<resources>
    <string name="id">en</string>
    <string name="language">ENGLISH</string>
    <string name="app_name">Weadives</string>
    <string name="AñadirNotificacion">Add notification</string>
    <string name="horarios">Schedules</string>
    <string name="TODO">TODO</string>
    <string name="todo">TODO</string>
    <string name="password">***********</string>
    <string name="password2">Password:</string>
    <string name="dummycorreo">dummy@gmail.com</string>
    <string name="correo">Mail Adress:</string>
    <string name="logIn">LOG IN</string>
    <string name="btn_login">Log In</string>
    <string name="btn_registrarse">Sign up</string>
    <string name="mantener_sessi_n_iniciada">Save credentials</string>
    <string name="registro">Sign up</string>
    <string name="nombre">Name:</string>
    <string name="nombre2">Name</string>
    <string name="code">Search for code</string>
    <string name="nombre_de_perfil">Username</string>
    <string name="title_activity_pantalla_mapa">MapScreen</string>
    <string name="gestion_notificaciones">Notification editor</string>
    <string name="confirmar">Confirm</string>
    <string name="gesti_n_de_notificaciones_de_inundacion">Flooading notification gestor</string>
    <string name="editar">edit</string>
    <string name="_4432">#4432</string>
    <string name="guardar_cambios">Save changes</string>
    <string name="guardar">Save</string>
    <string name="notificaciones">Notifications</string>
    <string name="mostrar_en_perfil">Show Profile</string>
    <string name="gestionar_parametros">Modify Parameters</string>
    <string name="confirmar_parametros">Confirm Parameters</string>
    <string name="viento">Wind</string>
    <string name="NombreActividad">Activity Name</string>
    <string name="cerrar_sesión">Sing out</string>
    <string name="añadir_amigo">Add friend</string>
    <string name="pendiente">Pending</string>
    <string name="eliminar">Delete</string>
    <string name="cancelar">Cancel</string>
    <string name="nombre_marcador">Marker name: </string>
    <string name="selecciona_actividad">Choose an Activity</string>
    <string name="selecciona_direccion">Choose a Direction</string>
    <string name="presion">Preassure</string>
    <string name="temperatura">Temperature</string>
    <string name="dirViento">Wind direction</string>
    <string name="dirOlas">Wave direction</string>
    <string name="alturaOla">Wave height</string>
    <string name="periodoOla">Wave period</string>
    <string name="añadircomment">Add comment</string>
    <string name="añadido">Added</string>
    <string name="alertaEliminarCuenta">Are you sure you want to delete this account?</string>
    <string name="alertaDejarDeSeguir">Are you sure you want to unfollow this person?</string>
    <string name="eliminarCuenta">Delete account</string>
    <string name="afirmativo">Yes</string>
    <string name="negativo">No</string>
    <string name="noAmigos">You do not have friends added</string>
    <string name="contraseña_incorrecta">Wrong password</string>
    <string name="alertaCambiarContraseña">Are you sure you want to change your password?</string>
    <string name="cambiarContraseña">Change password</string>
    <string name="seleccionarFotoGaleria">Choose photo from gallery</string>
    <string name="hacerFoto">Take picture</string>
    <string name="no_public_available">No publications available</string>
    <string name="no_friend">You have to be friend with this user to see his/her publications</string>
    <string name="AlreadyLike">You already Like/Disliked this</string>
    <string name="no_preferencias">There are no preferences</string>
    <string name="nuevo_parametro">New Parameter</string>
    <string name="ayudaHorario_1"> In this page you can see de parameters of the meteorological prevision. The values have the following magnitudes: </string>
    <string name="ayudaHorario_2"> Pressure = hPa.  Temperature = ªC.  Wind Speed = knots.  Wind Direction = wind direction.  Wave Height = meters.  Wave Period = seconds.  Wave Dir. = wave direction. </string>
    <string name="ayudapreferencias">In this page you will be able to create your own preferences. With the + button, you will be able to create a new preference which parameters can be changed writing in the txtLabel.</string>
    <string name="ayudapreferencias2" > With the button Save, you would be able to sabe the preference and using the switches you could activate notificatios or upload to your profile if you have one! </string>
    <string name="ayuda"> Guide to the user</string>
    <string name="txtContraseña">password</string>
    <string name="deletePar1">Delete Parameter</string>
    <string name="deletepar2">Are you sure you want to delete this parameter?</string>
    <string name="eliminarImagen">Delete image</string>
    <string name="alertaEliminarImagen">¿Are you sure you want to delete your profile photo?</string>
    <string name="marcador_vacio"> Choose a Waypoint </string>
    <string name="buscar">Search by name</string>
    <string name="norte">North</string>
    <string name="nordeste">Northeast</string>
    <string name="este">East</string>
    <string name="sudeste">Southeast</string>
    <string name="sud">south</string>
    <string name="sudoeste">Southest</string>
    <string name="oeste">West</string>
    <string name="nordoeste">NorthWest</string>
    <string name="no_dir">Any Direction</string>
    <string name="commentadded">Comment Added</string>
    <string name="errorLogIn">Failed to log in</string>
    <string name ="ayudamapa">On this screen you can create and manage bookmarks. To create a new marker click on the map, to delete the marker click on it and select delete.</string>
    <string name ="ayudamapa2">To view the data select one of the types with the buttons on the right, indicate the day and with the Slider change to the desired time.</string>
    <string name="oleaje">Swell</string>
</resources>