<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme = "@style/Theme.AppCompat.Light.Dialog"
    android:background="@color/fondo">

    <EditText
        android:id="@+id/etP_contraseña3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtContraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <EditText
        android:id="@+id/etA_correo3"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dummycorreo"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_correo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etN_nombrepersona2"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre2"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/txt_nombre2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/txt_contraseña3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/password2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/txt_nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/nombre"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/txt_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/correo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre2"
        app:layout_constraintVertical_bias="0.103" />

    <ImageView
        android:id="@+id/btn_home6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boton_home" />

    <ImageView
        android:id="@+id/img_perfil"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/etN_nombrepersona2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/profillepicbase" />

    <Button
        android:id="@+id/btn_guardarCambios"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/guardar_cambios"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etP_contraseña3"
        app:layout_constraintVertical_bias="0.287"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_eliminarCuenta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Delete account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guardarCambios"
        app:layout_constraintVertical_bias="0.144"
        android:background="@drawable/button_rounded_grey"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_deleteImage"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:text="@string/eliminarImagen"
        app:layout_constraintBottom_toTopOf="@+id/etN_nombrepersona2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_perfil"
        app:layout_constraintVertical_bias="0.233" />

</androidx.constraintlayout.widget.ConstraintLayout>