<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PantallaMapa.PantallaMapa"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:id="@+id/LinearLayoutMapa"
        android:layout_width="58dp"
        android:layout_height="187dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button_rounded_black"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_Marcadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/TODO"
            android:src="@android:drawable/ic_dialog_map"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/btn_temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/TODO"
            android:src="@android:drawable/ic_menu_compass" />

        <ImageButton
            android:id="@+id/btn_oleaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/TODO"
            android:src="@android:drawable/ic_menu_mapmode" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_gestorNotificaciones"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_rounded_black"
        android:text="@string/gestion_notificaciones"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_home5"
        android:layout_width="43dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boton_home" />

    <LinearLayout
        android:id="@+id/LinearLayoutMarcador"
        android:layout_width="334dp"
        android:layout_height="121dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map"
        tools:visibility="invisible">

        <EditText
            android:id="@+id/txt_nombreMarcador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nombre_marcador"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/LinearLayoutMarcadorBotones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirmar" />

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutEliminarMarcador"
        android:layout_width="334dp"
        android:layout_height="122dp"
        android:background="@color/cardview_shadow_end_color"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map">

        <LinearLayout
            android:id="@+id/LinearLayoutEliminarMarcadorBotones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eliminar" />

            <Button
                android:id="@+id/btn_cancelarEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
